# pdf-extractext

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.services.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: document_routes.py
app/application/: document_service.py  text_summary_service.py
app/domain/: document.py  pdf_validator.py
app/infrastructure/: database.py  logging_config.py  mongo_document_repository.py  pdf_text_extractor.py  security_headers.py
app/schemas/: document_schema.py
docker/: .env.example  docker-compose.services.yml  docker-compose.yml
docs/: ARQUITECTURA.md  SEGURIDAD.md
tests/: test_checksum.py  test_document_repository.py  test_document_repository_update.py  test_document_routes.py  test_document_service.py  test_document_service_update.py  test_pdf_text_extractor.py  test_pdf_validator.py
